--- a/Introduction.html
+++ b/Introduction.html
@@ -9,11 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>CSS Training.Sign In</title>
+    <title>CSS Training.Introduction</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.php">Trainning</a>
+        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.php">World ACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="?pg=int">Introducion</a>
+              <a class="nav-link active" href="#">Introduction</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
@@ -31,32 +31,21 @@
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenu"><span class="dropdown-item-text">Guset</span>
                 <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="login.html">if you have a account, <strong>Login</strong></a>
-                      <a class="dropdown-item" href="register.html">Don\'t have a account? <strong>Register</strong></a>
-
+                <a class="dropdown-item" href="login.php">if you have a account, <strong>Login</strong></a>
+                <a class="dropdown-item" href="register.php">Don't have a account? <strong>Register</strong></a>
               </div>
             </li>
           </ul>
         </div>
     </nav>
-    <div class="container-fluid">
-      <div class="section-login">
-        <form action="index.html" method="post">
-          <div class="form-row">
-            <label for="identifier">Email Address</label>
-            <input type="email" class="form-control id" id="identifier" placeholder="Enter Email">
-          </div>
-          <div class="form-row">
-            <label for="password">Password</label>
-            <input type="password" class="form-control pw" id="password" placeholder="Password">
-          </div>
-          <div class="form-row form-check" id="Remembercheckbox">
-            <input type="checkbox" class="form-check-input" id="RememberCheck">
-            <label for="RememberCheck" class="form-check-label">Remember Email Address</label>
-          </div>
-          <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-        </form>
-      </div>
+
+
+    <div class="container-fluid intro">
+      <h1 class="Display-1 intro-plain">Who is Choi Won-been?</h1>
+      <img src="http://localhost/Beginner_Trainning1/img/Wonbeen.png" class="intro-img">
+      <p class="intro-plain">He is the <strong>ACE</strong> of BCSD lab Beginner for Front-end in Q2 2019.</p>
+      <p class="intro-plain">He is called 'Wonbeen-go-dong of magic'.</p>
+      <p class="intro-plain">He is running for the <strong>World Ace</strong>.</p>
     </div>
 
 
