--- a/Introduction.html
+++ b/Introduction.html
@@ -23,13 +23,19 @@
             <li class="nav-item">
               <a class="nav-link active" href="#">Introduction</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost/Beginner_Trainning1/ability.html">ability</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost/Beginner_Trainning1/friendship.html">friendship</a>
+            </li>
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="navbarProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profile
               </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenu"><span class="dropdown-item-text">Guset</span>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="login.php">if you have a account, <strong>Login</strong></a>
                 <a class="dropdown-item" href="register.php">Don't have a account? <strong>Register</strong></a>
@@ -43,9 +49,10 @@
     <div class="container-fluid intro">
       <h1 class="Display-1 intro-plain">Who is Choi Won-been?</h1>
       <img src="http://localhost/Beginner_Trainning1/img/Wonbeen.png" class="intro-img">
+      <p class="intro-underimg">This picture shows his evolution.</p>
       <p class="intro-plain">He is the <strong>ACE</strong> of BCSD lab Beginner for Front-end in Q2 2019.</p>
       <p class="intro-plain">He is called 'Wonbeen-go-dong of magic'.</p>
-      <p class="intro-plain">He is running for the <strong>World Ace</strong>.</p>
+      <p class="intro-plain">He is running for the <strong>World ACE</strong>.</p>
     </div>
 
 
