--- a/friendship.html
+++ b/friendship.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>CSS Training.Sign In & Register</title>
+    <title>CSS Training.Introduction</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,7 +27,7 @@
               <a class="nav-link" href="http://localhost/Beginner_Trainning1/ability.html">ability</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/friendship.html">friendship</a>
+              <a class="nav-link active" href="#">friendship</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
@@ -35,37 +35,25 @@
               <a class="nav-link dropdown-toggle" id="navbarProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profile
               </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile">
-                <?php
-                  if(1){
-                    echo '
-                      <span class="dropdown-item-text">Guest</span>
-                    ';
-                  } else {
-                    echo '<a class="dropdown-item-text" href="#">계정</a>';
-                  }
-                 ?>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
                 <div class="dropdown-divider"></div>
-                <?php
-                  if(1){
-                    echo '
-                      <a class="dropdown-item" href="login.php">if you have a account, <strong>Sign in</strong></a>
-                      <a class="dropdown-item" href="register.php">Don\'t have a account? <strong>Sign up</strong></a>
-                    ';
-                  } else {
-                    echo '
-                      <a class="dropdown-item" href="#"><strong>Logout</strong></a>
-                    ';
-                  }
-
-                 ?>
-
+                <a class="dropdown-item" href="login.php">if you have a account, <strong>Login</strong></a>
+                <a class="dropdown-item" href="register.php">Don't have a account? <strong>Register</strong></a>
               </div>
             </li>
           </ul>
         </div>
     </nav>
 
+
+    <div class="container-fluid intro">
+      <h1 class="Display-1 intro-plain">How's his friendship?</h1>
+      <img src="http://localhost/Beginner_Trainning1/img/friendship.jpg" class="intro-img">
+      <p class="intro-underimg">This picture shows his power of In-ssa so called Insider.</p>
+      <p class="intro-plain">He is the strongest In-ssa in Koreatech which is better than SKY.</p>
+      <p class="intro-plain">Worlds know his power of In-ssa.</p>
+      <p class="intro-plain">If you ask someone "Do you know Won-Been?", he or she says "Of course!".</p>
+    </div>
 
 
    <nav class="nav nav-pills justify-content-center developer">
