--- a/Introduction.html
+++ b/Introduction.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="/Beginner_Trainning1/css/style.css">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>CSS Training.Introduction</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.php">World ACE</a>
+    <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
+        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.html">World ACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,8 +38,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.php">if you have a account, <strong>Login</strong></a>
-                <a class="dropdown-item" href="register.php">Don't have a account? <strong>Register</strong></a>
+                <a class="dropdown-item" href="login.html">if you have a account, <strong>Login</strong></a>
+                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Register</strong></a>
               </div>
             </li>
           </ul>
@@ -48,7 +49,7 @@
 
     <div class="container-fluid intro">
       <h1 class="Display-1 intro-plain">Who is Choi Won-been?</h1>
-      <img src="http://localhost/Beginner_Trainning1/img/Wonbeen.png" class="intro-img">
+      <img src="http://localhost/Beginner_Trainning1/img/Wonbeen.png" class="intro-img" alt="His evolution">
       <p class="intro-underimg">This picture shows his evolution.</p>
       <p class="intro-plain">He is the <strong>ACE</strong> of BCSD lab Beginner for Front-end in Q2 2019.</p>
       <p class="intro-plain">He is called 'Wonbeen-go-dong of magic'.</p>
@@ -56,9 +57,9 @@
     </div>
 
 
-   <nav class="nav nav-pills justify-content-center developer">
-     <a href="https://www.facebook.com/pedogunu" class="nav-item nav-link developer" text-decoration = none target="_blank">Developer's Facebook</a>
-     <a href="mailto:pedogunu@gmail.com" class="nav-item nav-link developer" target="_blank">Contact to Developer</a>
+    <nav class="row justify-content-center developer">
+      <a href="https://www.facebook.com/pedogunu" class="col-2" target="_blank">Developer's Facebook</a>
+      <a href="mailto:pedogunu@gmail.com" class="col-2" target="_blank">Contact to Developer</a>
     </nav>
 
     <!-- JavaScript 선택사항 -->
