--- a/friendship.html
+++ b/friendship.html
@@ -12,8 +12,8 @@
     <title>CSS Training.Introduction</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.php">World ACE</a>
+    <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
+        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.html">World ACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,8 +37,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.php">if you have a account, <strong>Login</strong></a>
-                <a class="dropdown-item" href="register.php">Don't have a account? <strong>Register</strong></a>
+                <a class="dropdown-item" href="login.html">if you have a account, <strong>Login</strong></a>
+                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Register</strong></a>
               </div>
             </li>
           </ul>
@@ -48,17 +48,17 @@
 
     <div class="container-fluid intro">
       <h1 class="Display-1 intro-plain">How's his friendship?</h1>
-      <img src="http://localhost/Beginner_Trainning1/img/friendship.jpg" class="intro-img">
+      <img src="http://localhost/Beginner_Trainning1/img/friendship.jpg" class="intro-img" alt="His friendship">
       <p class="intro-underimg">This picture shows his power of In-ssa so called Insider.</p>
-      <p class="intro-plain">He is the strongest In-ssa in Koreatech which is better than SKY.</p>
-      <p class="intro-plain">Worlds know his power of In-ssa.</p>
-      <p class="intro-plain">If you ask someone "Do you know Won-Been?", he or she says "Of course!".</p>
+      <p class="intro-plain">He is the <strong>strongest In-ssa</strong> in Koreatech which is<strong> better than SKY.</strong></p>
+      <p class="intro-plain">Worlds know his <strong>power of In-ssa.</strong></p>
+      <p class="intro-plain">If you ask someone "<strong>Do you know Won-Been?</strong>", he or she says "Of course!".</p>
     </div>
 
 
-   <nav class="nav nav-pills justify-content-center developer">
-     <a href="https://www.facebook.com/pedogunu" class="nav-item nav-link developer" text-decoration = none target="_blank">Developer's Facebook</a>
-     <a href="mailto:pedogunu@gmail.com" class="nav-item nav-link developer" target="_blank">Contact to Developer</a>
+    <nav class="row justify-content-center developer">
+      <a href="https://www.facebook.com/pedogunu" class="col-2" target="_blank">Developer's Facebook</a>
+      <a href="mailto:pedogunu@gmail.com" class="col-2" target="_blank">Contact to Developer</a>
     </nav>
 
     <!-- JavaScript 선택사항 -->
