--- a/ability.html
+++ b/ability.html
@@ -12,8 +12,8 @@
     <title>CSS Training.Introduction</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.php">World ACE</a>
+    <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
+        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.html">World ACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,8 +37,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.php">if you have a account, <strong>Login</strong></a>
-                <a class="dropdown-item" href="register.php">Don't have a account? <strong>Register</strong></a>
+                <a class="dropdown-item" href="login.html">if you have a account, <strong>Login</strong></a>
+                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Register</strong></a>
               </div>
             </li>
           </ul>
@@ -51,14 +51,14 @@
       <p class="intro-plain">His ability is unbelievable.</p>
       <p class="intro-plain">Needless to say, his coding skill is amazing, too.</p>
       <p class="intro-plain">He always says "Assignments of this week were so easy." when he ends assignments.</p>
-      <img src="http://localhost/Beginner_Trainning1/img/ability.jpg" class="intro-img">
+      <img src="http://localhost/Beginner_Trainning1/img/ability.jpg" class="intro-img" alt="His ability">
       <p class="intro-underimg">This photo shows him laughing at the end of the assignment and saying it is easy.</p>
     </div>
 
 
-   <nav class="nav nav-pills justify-content-center developer">
-     <a href="https://www.facebook.com/pedogunu" class="nav-item nav-link developer" text-decoration = none target="_blank">Developer's Facebook</a>
-     <a href="mailto:pedogunu@gmail.com" class="nav-item nav-link developer" target="_blank">Contact to Developer</a>
+    <nav class="row justify-content-center developer">
+      <a href="https://www.facebook.com/pedogunu" class="col-2" target="_blank">Developer's Facebook</a>
+      <a href="mailto:pedogunu@gmail.com" class="col-2" target="_blank">Contact to Developer</a>
     </nav>
 
     <!-- JavaScript 선택사항 -->
