--- a/login.html
+++ b/login.html
@@ -78,9 +78,9 @@
           </span>
         </div>
         <div class="form-row section-login-comp1">
-          <hr class="col-md-5 col-sm-4"/>
+          <hr class="col-md-5 col-sm-5 col-5"/>
           <p>OR</p>
-          <hr class="col-md-5 col-sm-4"/>
+          <hr class="col-md-5 col-sm-5 col-5"/>
         </div>
         <a class="btn btn-info btn-block section-login-comp2" role="button" href="http://localhost/Beginner_Trainning1/register.html">Sign up with new account</a>
         <div class="form-row">
@@ -111,9 +111,9 @@
     </div>
 
 
-    <nav class="row justify-content-center developer">
-      <a href="https://www.facebook.com/pedogunu" class="col-2" target="_blank">Developer's Facebook</a>
-      <a href="mailto:pedogunu@gmail.com" class="col-2" target="_blank">Contact to Developer</a>
+    <nav class="row justify-content-center text-center developer">
+      <a href="https://www.facebook.com/pedogunu" class="col-lg-3 col-sm-4" target="_blank">Developer's Facebook</a>
+      <a href="mailto:pedogunu@gmail.com" class="col-lg-3 col-sm-4" target="_blank">Contact to Developer</a>
     </nav>
 
     <!-- JavaScript 선택사항 -->
