--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>CSS Training.Sign In</title>
+    <title>CSS Training.Sign up</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
@@ -72,9 +72,9 @@
             </div>
           </div>
         <div class="form-row section-register-comp1">
-          <hr class="col-lg-5 col-md-5 col-sm-5"/>
+          <hr class="col-5"/>
           <p>OR</p>
-          <hr class="col-lg-5 col-md-5 col-sm-5"/>
+          <hr class="col-5"/>
         </div>
 
         <form class="section-register-comp1 needs-validation" action="#" method="post">
@@ -93,13 +93,13 @@
           </div>
 
           <div class="section-register-comp2 form-row">
-            <div class="form-group col-md-6 col-sm-6">
+            <div class="form-group col-6">
               <label for="password">Password</label>
               <input type="password" class="form-control pw" name="pw" id="password" placeholder="Password" required>
               <div class="valid-tooltip">Cool!</div>
               <div class="invalid-tooltip">Enter your password.</div>
             </div>
-            <div class="form-group col-md-6 col-sm-6">
+            <div class="form-group col-6">
               <label for="password-check">Confirm Password</label>
               <input type="password" class="form-control pw-check"  name="pw-check" id="password-check" placeholder="Repeat Password" required>
               <div class="valid-tooltip">Cool!</div>
@@ -107,19 +107,19 @@
             </div>
           </div>
           <div class="section-register-comp2 form-row">
-            <div class="form-group col-md-5 col-sm-5">
+            <div class="form-group col-5">
               <label for="name-last">Last name</label>
               <input type="text" class="form-control" name="name-last" id="name-last" placeholder="Last name" required>
               <div class="valid-tooltip">That's nice!</div>
               <div class="invalid-tooltip">Enter your Last name.</div>
             </div>
-            <div class="form-group col-md-5 col-sm-5">
+            <div class="form-group col-5">
               <label for="name-first">First name</label>
               <input type="text" class="form-control" name="name-first" id="name-first" placeholder="First name" required>
               <div class="valid-tooltip">That's nice!</div>
               <div class="invalid-tooltip">Enter your First name.</div>
             </div>
-            <div class="form-group col-md-2 col-sm-2">
+            <div class="form-group col-2">
               <label for="gender">Gender</label>
               <select class="form-control" name="gender" id="gender" required>
                 <option value="Male">M</option>
@@ -130,12 +130,12 @@
             </div>
           </div>
           <div class="form-row section-register-comp2">
-            <hr class="col-lg-5 col-md-4 col-sm-4"/>
+            <hr class="col-lg-5 col-4"/>
             <p>Optional</p>
-            <hr class="col-lg-5 col-md-4 col-sm-4"/>
+            <hr class="col-lg-5 col-4"/>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-5">
+            <div class="form-group  col-md-5 col-12">
               <label for="phonenumber">Phone number</label>
               <div class="input-group">
                 <div class="input-group-prepend">
@@ -144,7 +144,7 @@
                 <input type="text" class="form-control" name="phone" id="phonenumber" placeholder="Your Phone number">
               </div>
             </div>
-            <div class="form-group col-md-3 col-sm-6">
+            <div class="form-group col-md-3 col-6">
               <label for="major-main">Main-Major</label>
               <select class="form-control" name="major-main" id="major-main">
                 <option value="cse">컴퓨터공학부</option>
@@ -157,7 +157,7 @@
               </select>
             </div>
 
-            <div class="form-group col-md-4 col-sm-6">
+            <div class="form-group col-md-4 col-6">
               <label for="student-id">Student ID</label>
               <input type="text" class="form-control" name="id-student" id="student-id" placeholder="ex)2019136077">
             </div>
@@ -167,10 +167,10 @@
             <label for="TermCheck" class="form-check-label">Agree Term of Services and Conditions</label>
           </div>
           <div class="form-row justify-content-center section-register-comp1">
-            <div class="col-md-3 col-sm-4">
+            <div class="col-md-3 col-4">
               <button type="submit" class="btn btn-block btn-primary signup">Sign in</button>
             </div>
-            <div class="col-md-3 col-sm-4">
+            <div class="col-md-3 col-4">
               <a class="btn btn-block btn-secondary cancel" href="http://localhost/Beginner_Trainning1/index.html">Cancel</a>
             </div>
           </div>
