--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span class="dropdown-item-text">Guest</span>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="login.html">if you have a account, <strong>Sign in</strong></a>
-                <a class="dropdown-item" href="register.html">Don\'t have a account? <strong>Sign up</strong></a>
+                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Sign up</strong></a>
 
               </div>
             </li>
