--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
             <input type="checkbox" class="form-check-input" name="Remember" id="RememberCheck">
             <label for="RememberCheck" class="form-check-label">Remember Email Address</label>
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+          <button type="submit" class="btn btn-primary btn-block login">Sign in</button>
         </form>
         <div class="form-row intro-login-comp2">
           <span>Forgot
@@ -84,26 +84,26 @@
         </div>
         <a class="btn btn-info btn-block section-login-comp2" role="button" href="http://localhost/Beginner_Trainning1/register.html">Sign up with new account</a>
         <div class="form-row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <a class="btn btn-block  section-login-comp2 btn-facebook" role="button" href="#">Sign up with Facebook</a>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <a class="btn btn-block  section-login-comp2 btn-googleplus" role="button" href="#">Sign up with Google+</a>
           </div>
         </div>
         <div class="form-row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <a class="btn btn-block  section-login-comp2 btn-naver" role="button" href="#">Sign up with Naver</a>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <a class="btn btn-block  section-login-comp2 btn-kakao" role="button" href="#">Sign up with Kakao</a>
           </div>
         </div>
         <div class="form-row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <a class="btn btn-block  section-login-comp2 btn-twitter" role="button" href="#">Sign up with Twitter</a>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <a class="btn btn-block  section-login-comp2 btn-koin" role="button" href="#">Sign up with Koin</a>
           </div>
         </div>
@@ -115,6 +115,7 @@
       <a href="https://www.facebook.com/pedogunu" class="col-lg-3 col-sm-4" target="_blank">Developer's Facebook</a>
       <a href="mailto:pedogunu@gmail.com" class="col-lg-3 col-sm-4" target="_blank">Contact to Developer</a>
     </nav>
+
 
     <!-- JavaScript 선택사항 -->
     <!-- jQuery Popper.js 그리고 Bootstrap JS -->
