--- a/Introduction.html
+++ b/Introduction.html
@@ -38,8 +38,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">if you have a account, <strong>Login</strong></a>
-                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Register</strong></a>
+                <a class="dropdown-item" href="login.html">if you have a account, <strong>Sign in</strong></a>
+                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Sign up</strong></a>
               </div>
             </li>
           </ul>
