--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="ko">
   <head>
     <!-- Required meta tags -->
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="/Beginner_Trainning1/css/style.css">
+    <link rel="stylesheet" href="/Beginner_Trainning1/css/validity.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -48,26 +49,26 @@
       <div class="section-register col-xl-6 offset-xl-3 col-md-8 offset-md-2 col-sm-12">
         <h1 class="text-center">Sign up at World ACE</h1>
           <div class="form-row justify-content-center">
-            <div class="col-lg-5 col-md-6 col-sm-6">
+            <div class="col-lg-5 col-sm-6 col=12">
               <a class="btn btn-block section-register-comp2 btn-facebook" role="button" href="#">Sign up with Facebook</a>
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-6">
+            <div class="col-lg-5 col-sm-6 col=12">
               <a class="btn btn-block section-register-comp2 btn-googleplus" role="button" href="#">Sign up with Google+</a>
             </div>
           </div>
           <div class="form-row justify-content-center">
-            <div class="col-lg-5 col-md-6 col-sm-6">
+            <div class="col-lg-5 col-sm-6 col=12">
               <a class="btn btn-block section-register-comp2 btn-naver"  role="button" href="#">Sign up with Naver</a>
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-6">
+            <div class="col-lg-5 col-sm-6 col=12">
               <a class="btn btn-block section-register-comp2 btn-kakao" role="button" href="#">Sign up with Kakao</a>
             </div>
           </div>
           <div class="form-row justify-content-center">
-            <div class="col-lg-5 col-md-6 col-sm-6">
+            <div class="col-lg-5 col-sm-6 col=12">
               <a class="btn btn-block section-register-comp2 btn-twitter" role="button" href="#">Sign up with Twitter</a>
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-6">
+            <div class="col-lg-5 col-sm-6 col=12">
               <a class="btn btn-block section-register-comp2 btn-koin" role="button" href="#">Sign up with Koin</a>
             </div>
           </div>
@@ -77,56 +78,49 @@
           <hr class="col-5"/>
         </div>
 
-        <form class="section-register-comp1 needs-validation" action="#" method="post">
+        <form class="section-register-comp1" action="#" method="post">
           <div class="section-register-comp2 form-row">
             <div class="col-sm-12">
               <label for="identifier">ID</label>
               <div class="input-group">
-                <input type="email" class="form-control id" name="id" id="identifier" placeholder="Email Address" required>
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="button" id="idcheck">Check Overlap</button>
-                </div>
-                <div class="valid-tooltip">Cool!</div>
-                <div class="invalid-tooltip">It is not e-mail format</div>
+                <input type="text" class="form-control id" name="id" id="identifier" placeholder="Email Address">
+
               </div>
             </div>
           </div>
+          <div class="valid-id valid">Good!</div>
 
           <div class="section-register-comp2 form-row">
             <div class="form-group col-6">
               <label for="password">Password</label>
-              <input type="password" class="form-control pw" name="pw" id="password" placeholder="Password" required>
-              <div class="valid-tooltip">Cool!</div>
-              <div class="invalid-tooltip">Enter password.</div>
+              <input type="password" class="form-control pw" name="pw" id="password" placeholder="Password">
+              <div class="valid-pw"></div>
             </div>
             <div class="form-group col-6">
               <label for="password-check">Confirm Password</label>
-              <input type="password" class="form-control pw-check"  name="pw-check" id="password-check" placeholder="Repeat Password" required>
-              <div class="valid-tooltip">Cool!</div>
-              <div class="invalid-tooltip">Doesn't match password.</div>
+              <input type="password" class="form-control pw-check"  name="pw-check" id="password-check" placeholder="Repeat Password">
+              <div class="valid-pwch"></div>
             </div>
           </div>
           <div class="section-register-comp2 form-row">
             <div class="form-group col-5">
               <label for="name-last">Last name</label>
-              <input type="text" class="form-control" name="name-last" id="name-last" placeholder="Last name" required>
-              <div class="valid-tooltip">That's nice!</div>
-              <div class="invalid-tooltip">Enter Last name.</div>
+              <input type="text" class="form-control lastname" name="name-last" id="name-last" placeholder="Last name">
+              <div class="valid-lastname"></div>
             </div>
             <div class="form-group col-5">
               <label for="name-first">First name</label>
-              <input type="text" class="form-control" name="name-first" id="name-first" placeholder="First name" required>
-              <div class="valid-tooltip">That's nice!</div>
-              <div class="invalid-tooltip">Enter First name.</div>
+              <input type="text" class="form-control firstname" name="name-first" id="name-first" placeholder="First name">
+              <div class="valid-firstname">Enter First name.</div>
             </div>
             <div class="form-group col-2">
               <label for="gender">Gender</label>
               <select class="form-control" name="gender" id="gender" required>
+                <option selected hidden disabled>Choose</option>
                 <option value="Male">M</option>
                 <option value="Female">F</option>
               </select>
-              <div class="valid-tooltip">That's nice!</div>
-              <div class="invalid-tooltip">Select gender.</div>
+              <div class="valid-gender"></div>
             </div>
           </div>
           <div class="form-row">
@@ -136,16 +130,17 @@
                 <div class="input-group-prepend">
                   <div class="input-group-text">+82</div>
                 </div>
-                <input type="text" class="form-control" name="phone" id="phonenumber" placeholder="Your Phone number">
+                <input type="text" class="form-control phone-number" name="phone" id="phonenumber" placeholder="Your Phone number">
               </div>
+              <div class="valid-phone"></div>
             </div>
             <div class="form-group col-md-4 col-6">
               <label for="student-id">Student ID</label>
-              <input type="text" class="form-control" name="id-student" id="student-id" placeholder="ex)2019136077">
+              <input type="text" class="form-control student-number" name="id-student" id="student-id" placeholder="ex)2019136077">
             </div>
             <div class="form-group col-md-3 col-6">
               <label for="major-main">Main-Major</label>
-              <input class="form-control" name="major-main" id="major-main" readonly>
+              <div class="form-control major" id="major-main" readonly></div>
             </div>
 
           </div>
@@ -171,6 +166,7 @@
       <a href="mailto:pedogunu@gmail.com" class="col-2" target="_blank">Contact to Developer</a>
     </nav>
 
+    <script src="/Beginner_Trainning1/js/register.js"></script>
     <!-- JavaScript 선택사항 -->
     <!-- jQuery Popper.js 그리고 Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
