--- a/register.html
+++ b/register.html
@@ -80,37 +80,55 @@
 
         <form class="section-register-comp1" action="#" method="post">
           <div class="section-register-comp2 form-row">
-            <div class="col-sm-12">
+            <div class="form-row col-12">
               <label for="identifier">ID</label>
-              <div class="input-group">
-                <input type="text" class="form-control id" name="id" id="identifier" placeholder="Email Address">
+              <input type="text" class="form-control id" name="id" id="identifier" placeholder="Email Address">
+            </div>
+            <div class="form-row">
+              <div class="valid-id valid invisible">Good!</div>
+              <div class="invalid-id invalid invisible">Enter Correct Email form</div>
+            </div>
+          </div>
 
+          <div class="section-register-comp2 form-row">
+            <div class="form-row col-6">
+              <div class ="form-row col-12">
+                <label for="password">Password</label>
+                <input type="password" class="form-control pw" name="pw" id="password" placeholder="Password">
+              </div>
+              <div class="form-row">
+                <div class="valid-pw valid invisible">Good!</div>
+                <div class="invalid-pw invalid invisible">Enter the password</div>
+              </div>
+            </div>
+            <div class="form-row col-6">
+              <div class="form-row col-12">
+                <label for="password-check">Confirm Password</label>
+                <input type="password" class="form-control pw-check"  name="pw-check" id="password-check" placeholder="Repeat Password">
+              </div>
+              <div class="form-row">
+                <div class="valid-pwch valid invisible">Cool!</div>
+                <div class="invalid-pwch invalid invisible">Wrong Password Confirmation</div>
               </div>
             </div>
           </div>
-          <div class="valid-id valid">Good!</div>
+          <div class="section-register-comp2 form-row">
+            <div class="form-row col-5">
+              <div class="form-row col-12">
+                <label for="name-last">Last name</label>
+                <input type="text" class="form-control lastname" name="name-last" id="name-last" placeholder="Last name">
+              </div>
+              <div class="form-row">
+                <div class="valid-lastname">Cool!</div>
+                <div class="invalid-lastname">Enter your Last name.</div>
+              </div>
+            </div>
+            <div class="form-group col-5">
+              <div class="form-row col-12">
 
-          <div class="section-register-comp2 form-row">
-            <div class="form-group col-6">
-              <label for="password">Password</label>
-              <input type="password" class="form-control pw" name="pw" id="password" placeholder="Password">
-              <div class="valid-pw"></div>
-            </div>
-            <div class="form-group col-6">
-              <label for="password-check">Confirm Password</label>
-              <input type="password" class="form-control pw-check"  name="pw-check" id="password-check" placeholder="Repeat Password">
-              <div class="valid-pwch"></div>
-            </div>
-          </div>
-          <div class="section-register-comp2 form-row">
-            <div class="form-group col-5">
-              <label for="name-last">Last name</label>
-              <input type="text" class="form-control lastname" name="name-last" id="name-last" placeholder="Last name">
-              <div class="valid-lastname"></div>
-            </div>
-            <div class="form-group col-5">
-              <label for="name-first">First name</label>
-              <input type="text" class="form-control firstname" name="name-first" id="name-first" placeholder="First name">
+                <label for="name-first">First name</label>
+                <input type="text" class="form-control firstname" name="name-first" id="name-first" placeholder="First name">
+              </div>
               <div class="valid-firstname">Enter First name.</div>
             </div>
             <div class="form-group col-2">
