--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="/Beginner_Trainning1/css/validity.css">
     <link rel="stylesheet" href="/Beginner_Trainning1/css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -48,20 +48,20 @@
     <div class="container-fluid">
       <div class="section-login col-xl-6 offset-xl-3 col-md-8 offset-md-2 col-sm-12">
         <h1 class="text-center">Sign in World ACE</h1>
-        <form class="section-login-comp1 needs-validation" action="#" method="post">
+        <form class="section-login-comp1 form-login" action="#" method="post">
           <div class="section-login-comp2 form-row">
             <div class="col-12">
               <label for="identifier">ID</label>
-              <input type="email" class="form-control id" name="id" id="identifier" placeholder="Email Address" required>
-              <div class="invalid-tooltip">Enter valid Email.</div>
+              <input type="text" class="form-control id" name="id" id="identifier" placeholder="Email Address">
             </div>
+          <div class="invalid-id invalid invisible">Write your ID.</div>
           </div>
           <div class="section-login-comp2 form-row">
             <div class="col-12">
               <label for="password">Password</label>
-              <input type="password" class="form-control pw" name="pw" id="password" placeholder="Password" required>
-              <div class="invalid-tooltip">Enter your password.</div>
+              <input type="password" class="form-control pw" name="pw" id="password" placeholder="Password">
             </div>
+          <div class="invalid-pw invalid invisible">Write your Password.</div>
           </div>
           <div class="section-login-comp2 form-row form-check" id="Remembercheckbox">
             <input type="checkbox" class="form-check-input" name="Remember" id="RememberCheck">
@@ -110,13 +110,12 @@
       </div>
     </div>
 
-
     <nav class="row justify-content-center text-center developer">
       <a href="https://www.facebook.com/pedogunu" class="col-lg-3 col-sm-4" target="_blank">Developer's Facebook</a>
       <a href="mailto:pedogunu@gmail.com" class="col-lg-3 col-sm-4" target="_blank">Contact to Developer</a>
     </nav>
 
-
+    <script src="/Beginner_Trainning1/js/login.js"></script>
     <!-- JavaScript 선택사항 -->
     <!-- jQuery Popper.js 그리고 Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
