--- a/ability.html
+++ b/ability.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
-        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.html">World ACE</a>
+        <a class="navbar-brand" href="./index.html">World ACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/Introduction.html">Introduction</a>
+              <a class="nav-link" href="./Introduction.html">Introduction</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">ability</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/friendship.html">friendship</a>
+              <a class="nav-link" href="./friendship.html">friendship</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
@@ -35,10 +35,13 @@
               <a class="nav-link dropdown-toggle" id="navbarProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profile
               </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile">
+                <span class="dropdown-item-text user-id">Guest</span>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">if you have a account, <strong>Sign in</strong></a>
-                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Sign up</strong></a>
+                <div class="nav-login"><a class="dropdown-item" href="login.html">if you have a account, <strong>Sign in</strong></a></div>
+                <div class="nav-register"><a class="dropdown-item" href="register.html">Don't have a account? <strong>Sign up</strong></a></div>
+                <div class="nav-logout"><a class="dropdown-item" href="index.html">If you want Logout, <strong>Sign
+                  out</strong></a></div>
               </div>
             </li>
           </ul>
@@ -51,7 +54,7 @@
       <p class="intro-plain">His ability is unbelievable.</p>
       <p class="intro-plain">Needless to say, his coding skill is amazing, too.</p>
       <p class="intro-plain">He always says "Assignments of this week were so easy." when he ends assignments.</p>
-      <img src="http://localhost/Beginner_Trainning1/img/ability.jpg" class="intro-img" alt="His ability">
+      <img src="./img/ability.jpg" class="intro-img" alt="His ability">
       <p class="intro-underimg">This photo shows him laughing at the end of the assignment and saying it is easy.</p>
     </div>
 
@@ -66,5 +69,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="./js/userInfo.js"></script>
   </body>
 </html>
