--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
-        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.html">World ACE</a>
+        <a class="navbar-brand" href="./index.html">World ACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/Introduction.html">Introduction</a>
+              <a class="nav-link" href="./Introduction.html">Introduction</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/ability.html">ability</a>
+              <a class="nav-link" href="./ability.html">ability</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/friendship.html">friendship</a>
+              <a class="nav-link" href="./friendship.html">friendship</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
@@ -36,11 +36,12 @@
                 Profile
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile">
-                <span class="dropdown-item-text">Guest</span>
+                <span class="dropdown-item-text user-id">Guest</span>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="login.html">if you have a account, <strong>Sign in</strong></a>
-                <a class="dropdown-item" href="register.html">Don't have a account? <strong>Sign up</strong></a>
-
+                <div class="nav-login"><a class="dropdown-item" href="login.html">if you have a account, <strong>Sign in</strong></a></div>
+                <div class="nav-register"><a class="dropdown-item" href="register.html">Don't have a account? <strong>Sign up</strong></a></div>
+                <div class="nav-logout"><a class="dropdown-item" href="index.html">If you want Logout, <strong>Sign
+                  out</strong></a></div>
               </div>
             </li>
           </ul>
@@ -57,21 +58,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active indexcarousel">
-            <img src="http://localhost/Beginner_Trainning1/img/Wonbeen.png" class="d-block w-100" alt="His evolution">
+            <img src="./img/Wonbeen.png" class="d-block w-100" alt="His evolution">
               <div class="carousel-caption d-none d-md-block">
                 <h2>Who is Choi Won-been?</h2>
                 <p>The World ACE, Choi Won-been</p>
               </div>
             </div>
             <div class="carousel-item indexcarousel">
-              <img src="http://localhost/Beginner_Trainning1/img/ability.jpg" class="d-block w-100" alt="His ability">
+              <img src="./img/ability.jpg" class="d-block w-100" alt="His ability">
               <div class="carousel-caption d-none d-md-block">
                 <h2>How's his skills?</h2>
                 <p>World Amazed at his skills.</p>
               </div>
             </div>
             <div class="carousel-item indexcarousel">
-              <img src="http://localhost/Beginner_Trainning1/img/friendship.jpg" class="d-block w-100" alt="His friendship">
+              <img src="./img/friendship.jpg" class="d-block w-100" alt="His friendship">
               <div class="carousel-caption d-none d-md-block">
                 <h2>How's his friendship?</h2>
                 <p>Worlds know Choi Won-been.</p>
@@ -96,10 +97,12 @@
      <a href="mailto:pedogunu@gmail.com" class="col-2" target="_blank">Contact to Developer</a>
     </nav>
 
+
     <!-- JavaScript 선택사항 -->
     <!-- jQuery Popper.js 그리고 Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="./js/userInfo.js"></script>
   </body>
 </html>
