--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
-        <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.html">World ACE</a>
+        <a class="navbar-brand" href="./index.html">World ACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/Introduction.html">Introduction</a>
+              <a class="nav-link" href="./Introduction.html">Introduction</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/ability.html">ability</a>
+              <a class="nav-link" href="./ability.html">ability</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://localhost/Beginner_Trainning1/friendship.html">friendship</a>
+              <a class="nav-link" href="./friendship.html">friendship</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
@@ -35,7 +35,7 @@
               <a class="nav-link dropdown-toggle" id="navbarProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profile
               </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text">Guest</span>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarProfile"><span class="dropdown-item-text user-id">Guest</span>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">if you have a account, <strong>Sign in</strong></a>
                 <a class="dropdown-item" href="register.html">Don't have a account? <strong>Sign up</strong></a>
@@ -48,7 +48,7 @@
     <div class="container-fluid">
       <div class="section-login col-xl-6 offset-xl-3 col-md-8 offset-md-2 col-sm-12">
         <h1 class="text-center">Sign in World ACE</h1>
-        <form class="section-login-comp1 form-login" action="#" method="post">
+        <form class="section-login-comp1 form-login" action="./index.html" method="post">
           <div class="section-login-comp2 form-row">
             <div class="col-12">
               <label for="identifier">ID</label>
@@ -64,7 +64,7 @@
           <div class="invalid-pw invalid invisible">Write your Password.</div>
           </div>
           <div class="section-login-comp2 form-row form-check" id="Remembercheckbox">
-            <input type="checkbox" class="form-check-input" name="Remember" id="RememberCheck">
+            <input type="checkbox" class="form-check-input rememberId" name="Remember" id="RememberCheck">
             <label for="RememberCheck" class="form-check-label">Remember Email Address</label>
           </div>
           <button type="submit" class="btn btn-primary btn-block login">Sign in</button>
@@ -82,7 +82,7 @@
           <p>OR</p>
           <hr class="col-md-5 col-sm-5 col-5"/>
         </div>
-        <a class="btn btn-info btn-block section-login-comp2" role="button" href="http://localhost/Beginner_Trainning1/register.html">Sign up with new account</a>
+        <a class="btn btn-info btn-block section-login-comp2" role="button" href="./register.html">Sign up with new account</a>
         <div class="form-row">
           <div class="col-12 col-sm-6">
             <a class="btn btn-block  section-login-comp2 btn-facebook" role="button" href="#">Sign up with Facebook</a>
@@ -115,7 +115,8 @@
       <a href="mailto:pedogunu@gmail.com" class="col-lg-3 col-sm-4" target="_blank">Contact to Developer</a>
     </nav>
 
-    <script src="/Beginner_Trainning1/js/login.js"></script>
+    <script src="./js/login.js"></script>
+    <script src="./js/loginStorage.js"></script>
     <!-- JavaScript 선택사항 -->
     <!-- jQuery Popper.js 그리고 Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
