--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light NavbarBar">
-    <a class="navbar-brand" href="http://localhost/Beginner_Trainning1/index.html">World ACE</a>
+    <a class="navbar-brand" href="./index.html">World ACE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost/Beginner_Trainning1/Introduction.html">Introduction</a>
+                <a class="nav-link" href="./Introduction.html">Introduction</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost/Beginner_Trainning1/ability.html">ability</a>
+                <a class="nav-link" href="./ability.html">ability</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="http://localhost/Beginner_Trainning1/friendship.html">friendship</a>
+                <a class="nav-link" href="./friendship.html">friendship</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
